change to normal

--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -7,8 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_count=int(input(\"enter the subject count:\"))\n",
-    "user_name=input(\"enter the name:\")\n",
+    "user_count=int(input("enter the subject count:\"))\n",
+    "user_name=input("enter the name:\")\n",
     "sub=[]\n",
     "sub_mark=[]\n",
     "if (user_count>=1): \n",
